--- a/app/views/car_models/_form.html.erb
+++ b/app/views/car_models/_form.html.erb
@@ -1,16 +1,31 @@
-<%= form_for @car_model do |f| %>
-  <%= f.error_messages %>
-  <p>
-    <%= f.label :car_brand_id %><br />
-    <%= f.number_field :car_brand_id %>
-  </p>
-  <p>
-    <%= f.label :name %><br />
-    <%= f.text_field :name %>
-  </p>
-  <p>
-    <%= f.label :creator_id %><br />
-    <%= f.number_field :creator_id %>
-  </p>
-  <p><%= f.submit %></p>
+<%= form_for @car_model, :html => { :class => 'form-horizontal' } do |f| %>
+  <fieldset>
+    <legend><%= controller.action_name.capitalize %> Car Model</legend>
+
+    <div class="control-group">
+      <%= f.label :car_brand_id, :class => 'control-label' %>
+      <div class="controls">
+        <%= f.number_field :car_brand_id, :class => 'number_field' %>
+      </div>
+    </div>
+
+    <div class="control-group">
+      <%= f.label :name, :class => 'control-label' %>
+      <div class="controls">
+        <%= f.text_field :name, :class => 'text_field' %>
+      </div>
+    </div>
+
+    <div class="control-group">
+      <%= f.label :creator_id, :class => 'control-label' %>
+      <div class="controls">
+        <%= f.number_field :creator_id, :class => 'number_field' %>
+      </div>
+    </div>
+
+    <div class="form-actions">
+      <%= f.submit nil, :class => 'btn btn-primary' %>
+      <%= link_to 'Cancel', car_models_path, :class => 'btn' %>
+    </div>
+  </fieldset>
 <% end %>
