--- a/app/views/car_models/edit.html.erb
+++ b/app/views/car_models/edit.html.erb
@@ -1,8 +1,1 @@
-<% title "Edit Car Model" %>
-
-<%= render 'form' %>
-
-<p>
-  <%= link_to "Show", @car_model %> |
-  <%= link_to "View All", car_models_path %>
-</p>
+<%= render :partial => 'form' %>
