--- a/app/views/car_parts/edit.html.erb
+++ b/app/views/car_parts/edit.html.erb
@@ -1,8 +1,1 @@
-<% title "Edit Car Part" %>
-
-<%= render 'form' %>
-
-<p>
-  <%= link_to "Show", @car_part %> |
-  <%= link_to "View All", car_parts_path %>
-</p>
+<%= render :partial => 'form' %>
