--- a/app/views/companies/edit.html.erb
+++ b/app/views/companies/edit.html.erb
@@ -1,8 +1,1 @@
-<% title "Edit Company" %>
-
-<%= render 'form' %>
-
-<p>
-  <%= link_to "Show", @company %> |
-  <%= link_to "View All", companies_path %>
-</p>
+<%= render :partial => 'form' %>
