--- a/app/views/car_models/new.html.erb
+++ b/app/views/car_models/new.html.erb
@@ -1,5 +1,1 @@
-<% title "New Car Model" %>
-
-<%= render 'form' %>
-
-<p><%= link_to "Back to List", car_models_path %></p>
+<%= render :partial => 'form' %>
