--- a/app/views/car_parts/_form.html.erb
+++ b/app/views/car_parts/_form.html.erb
@@ -1,12 +1,24 @@
-<%= form_for @car_part do |f| %>
-  <%= f.error_messages %>
-  <p>
-    <%= f.label :name %><br />
-    <%= f.text_field :name %>
-  </p>
-  <p>
-    <%= f.label :creator_id %><br />
-    <%= f.text_field :creator_id %>
-  </p>
-  <p><%= f.submit %></p>
+<%= form_for @car_part, :html => { :class => 'form-horizontal' } do |f| %>
+  <fieldset>
+    <legend><%= controller.action_name.capitalize %> Car Part</legend>
+
+    <div class="control-group">
+      <%= f.label :name, :class => 'control-label' %>
+      <div class="controls">
+        <%= f.text_field :name, :class => 'text_field' %>
+      </div>
+    </div>
+
+    <div class="control-group">
+      <%= f.label :creator_id, :class => 'control-label' %>
+      <div class="controls">
+        <%= f.text_field :creator_id, :class => 'text_field' %>
+      </div>
+    </div>
+
+    <div class="form-actions">
+      <%= f.submit nil, :class => 'btn btn-primary' %>
+      <%= link_to 'Cancel', car_parts_path, :class => 'btn' %>
+    </div>
+  </fieldset>
 <% end %>
