--- a/app/views/car_parts/new.html.erb
+++ b/app/views/car_parts/new.html.erb
@@ -1,5 +1,1 @@
-<% title "New Car Part" %>
-
-<%= render 'form' %>
-
-<p><%= link_to "Back to List", car_parts_path %></p>
+<%= render :partial => 'form' %>
