--- a/app/views/car_variants/index.html.erb
+++ b/app/views/car_variants/index.html.erb
@@ -1,33 +1,38 @@
-<h1>Listing car_variants</h1>
+<% title 'Car Variants' %>
 
-<table>
-  <tr>
-    <th>Car brand</th>
-    <th>Car model</th>
-    <th>Name</th>
-    <th>Start year</th>
-    <th>End year</th>
-    <th>Creator</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
-
-<% @car_variants.each do |car_variant| %>
-  <tr>
-    <td><%= car_variant.car_brand.name %></td>
-    <td><%= car_variant.car_model.name %></td>
-    <td><%= car_variant.name %></td>
-    <td><%= car_variant.start_year %></td>
-    <td><%= car_variant.end_year %></td>
-    <td><%= car_variant.creator_id %></td>
-    <td><%= link_to 'Show', car_variant %></td>
-    <td><%= link_to 'Edit', edit_car_variant_path(car_variant) %></td>
-    <td><%= link_to 'Destroy', car_variant, confirm: 'Are you sure?', method: :delete %></td>
-  </tr>
-<% end %>
+<table class="table">
+  <thead>
+    <tr>
+      <th>Model</th>
+      <th>ID</th>
+      <th>Name</th>
+      <th>Count</th>
+      <th>Actions</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @car_variants.group_by(&:car_brand).each do |brand, car_variants| %>
+			<tr><%= content_tag :td, brand.name, colspan: 5, class: 'label label-info' %></tr>
+			<% car_variants.group_by(&:car_model).each do |cmodel, cvs| %>
+				<tr>
+					<%= content_tag :td, cmodel.name, rowspan: cvs.count + 1 %>
+				</tr>
+				<% cvs.each do |car_variant| %>
+	      <tr>
+	        <td><%= car_variant.id %></td>
+	        <td><%= link_to car_variant.name, car_variant_path(car_variant) %></td>
+	        <td><%= car_variant.entries.count %></td>
+	        <td>
+	          <%= link_to 'Edit', edit_car_variant_path(car_variant), :class => 'btn btn-mini' %>
+	          <%= link_to 'Destroy', car_variant_path(car_variant), :method => :delete, :confirm => 'Are you sure?', :class => 'btn btn-mini btn-danger' %>
+	        </td>
+	      </tr>
+				<% end %>
+			<% end %>
+    <% end %>
+  </tbody>
 </table>
 
 <%= will_paginate @car_variants %>
 
-<%= link_to 'New Car variant', new_car_variant_path %>
+<%= link_to 'New', new_car_variant_path, :class => 'btn btn-primary' %>
