--- a/app/views/companies/new.html.erb
+++ b/app/views/companies/new.html.erb
@@ -1,5 +1,1 @@
-<% title "New Company" %>
-
-<%= render 'form' %>
-
-<p><%= link_to "Back to List", companies_path %></p>
+<%= render :partial => 'form' %>
