Corrected tagging of Orders. Was unable to update attributes because of failing validation for ref_name. Removed it for now. Added bootstrap-theme to Branches.

--- a/app/views/branches/_form.html.erb
+++ b/app/views/branches/_form.html.erb
@@ -1,32 +1,17 @@
-<%= form_for @branch do |f| %>
-  <%= f.error_messages %>
-  <p>
-    <%= f.label :company_id %><br />
-    <%= f.number_field :company_id %>
-  </p>
-  <p>
-    <%= f.label :name %><br />
-    <%= f.text_field :name %>
-  </p>
-  <p>
-    <%= f.label :address1 %><br />
-    <%= f.text_field :address1 %>
-  </p>
-  <p>
-    <%= f.label :address2 %><br />
-    <%= f.text_field :address2 %>
-  </p>
-  <p>
-    <%= f.label :zip_code %><br />
-    <%= f.number_field :zip_code %>
-  </p>
-  <p>
-    <%= f.label :city_id %><br />
-    <%= f.number_field :city_id %>
-  </p>
-  <p>
-    <%= f.label :approver_id %><br />
-    <%= f.number_field :approver_id %>
-  </p>
-  <p><%= f.submit %></p>
+<%= simple_form_for @branch, :html => { :class => 'form-horizontal' } do |f| %>
+  <fieldset>
+    <legend><%= controller.action_name.capitalize %> Branch</legend>
+
+		<%= f.association :company %>
+		<%= f.input :name %>
+ 		<%= f.input :address1 %>
+ 		<%= f.input :address2 %>
+ 		<%= f.input :zip_code %>
+		<%= f.association :city %>
+    <%= f.input :approver_id, collection: Company.includes(:users), as: :grouped_select, group_label_method: :nickname, group_method: :users, label_method: :username, include_blank: true %>
+    <div class="form-actions">
+      <%= f.submit nil, :class => 'btn btn-primary' %>
+      <%= link_to 'Cancel', branches_path, :class => 'btn' %>
+    </div>
+  </fieldset>
 <% end %>
