--- a/app/views/branches/edit.html.erb
+++ b/app/views/branches/edit.html.erb
@@ -1,8 +1,1 @@
-<% title "Edit Branch" %>
-
-<%= render 'form' %>
-
-<p>
-  <%= link_to "Show", @branch %> |
-  <%= link_to "View All", branches_path %>
-</p>
+<%= render :partial => 'form' %>
