--- a/app/views/branches/new.html.erb
+++ b/app/views/branches/new.html.erb
@@ -1,5 +1,1 @@
-<% title "New Branch" %>
-
-<%= render 'form' %>
-
-<p><%= link_to "Back to List", branches_path %></p>
+<%= render :partial => 'form' %>
