--- a/app/views/buyer/print_entry.html.erb
+++ b/app/views/buyer/print_entry.html.erb
@@ -16,10 +16,10 @@
 	<%= content_tag :table, class: 'table table-bordered table-condensed' do %>
 		<%= content_tag :thead do %>
 			<%= content_tag :tr do %>
-				<%= content_tag :th, 'Part Description', class: 'span4' %>
-				<%= content_tag :th, 'Orig', class: 'bids center' %>
-				<%= content_tag :th, 'Rep', class: 'bids center' %>
-				<%= content_tag :th, 'Surp', class: 'bids center' %>
+				<%= content_tag :th, 'Part Description', class: 'span4 txtcenter' %>
+				<%= content_tag :th, 'Orig', class: 'bids txtcenter' %>
+				<%= content_tag :th, 'Rep', class: 'bids txtcenter' %>
+				<%= content_tag :th, 'Surp', class: 'bids txtcenter' %>
 			<% end %>
 		<% end %>
 
