--- a/app/views/seller/fees.html.erb
+++ b/app/views/seller/fees.html.erb
@@ -26,7 +26,11 @@
 				<%= content_tag :th, 'Vehicle' %>
 				<th>
 				<%= content_tag :div, 'Parts', class: 'part span3' %>
-				<%= content_tag :div, 'Lowest Bid', class: 'amount txtright' %>
+				<% if params[:t] == 'bf' %>
+					<%= content_tag :div, 'Lowest Bid', class: 'amount txtright' %>
+				<% else %>
+					<%= content_tag :div, 'PO Amount', class: 'amount txtright' %>
+				<% end %>
 				<%= content_tag :div, 'Factors', class: 'factors txtcenter' %>
 				<%= content_tag :div, 'Fee', class: 'amount txtright' %>
 				<% if params[:t] == 'bf' %>
