Still working on paperclip permissions problem.

--- a/app/assets/stylesheets/messages.css.scss
+++ b/app/assets/stylesheets/messages.css.scss
@@ -3,7 +3,7 @@
 	h6 { clear: both; margin-bottom: 20px;  }
 	.msg-buttons {  
 		b, a { float: right; margin-right: 5px;}
-		b { margin-top: 10px; margin-right: 15px;}
+		b { margin-right: 15px;}
 		}
 	dt, dd { margin-bottom: 10px; }
 	/*dd { width: 589px; }*/
