--- a/app/views/seller/_parts_table.html.erb
+++ b/app/views/seller/_parts_table.html.erb
@@ -33,22 +33,20 @@
 									<% own_bid = bs.last %>
 									<%= render own_bid if own_bid %>
 									
-									<% lo_bid = bids.last %>
-									<% if lo_bid != own_bid  %>
-										<%= content_tag :code, class: "small" do %>
-											<%= content_tag :span, currency(lo_bid.amount), class: " #{' cancelled' if lo_bid.cancelled?}" %>
-											<%= content_tag :em, 'winner' %>
+									<% if !item.is_online %>
+										<% lo_bid = bids.last %>
+										<% if lo_bid != own_bid  %>
+											<%= content_tag :code, class: "small" do %>
+												<%= content_tag :span, currency(lo_bid.amount), class: " #{' cancelled' if lo_bid.cancelled?}" %>
+												<%= content_tag :em, 'winner' %>
+											<% end %>
 										<% end %>
 									<% end %>
 									
-									<%#= content_tag :p, currency(lo_bid.amount), class: 'small' if lo_bid != own_bid  %>
-
 								<% end %> 
 	
-	
 							<% end %>
-
-					<% end %>
+						<% end %>
 					</div>
 				</td>
 			<% end %>
